--- a/index.html
+++ b/index.html
@@ -6,7 +6,23 @@
         </title>
     </head>
 
+ 
+    
     <body>
+        <nav>
+            <p>
+                Anthony Carmack
+            </p>
+            <a href="contact.html">
+                Contact
+            </a>
+            <a href="portfolio.html">
+                Portfolio
+            </a>
+            <a href="index.html">
+                About
+            </a>
+        </nav>
         <header>
             Poop
         </header>
