--- a/contact.html
+++ b/contact.html
@@ -7,9 +7,32 @@
         </title>
     </head>
     <body>
+        <nav>
+            <p>
+                Anthony Carmack
+            </p>
+            <a href="contact.html">
+                Contact
+            </a>
+            <a href="portfolio.html">
+                Portfolio
+            </a>
+            <a href="index.html">
+                About
+            </a>
+        </nav>
         <h1>
-            My contact page
+            Contact 
         </h1>
+        <form>
+            <label for="name">name</label> <br>
+            <input id="name" type="text" name="name"> <br>
+            <label for="email">email</label> <br>
+            <input id="email" type="email" name="email"> <br>
+            <label for="message">message</label> <br>
+            <textarea id="message" type="text" name="message"> </textarea>
+        </form>
+        
         
     </body>
 </html>
