--- a/index.html
+++ b/index.html
@@ -23,12 +23,23 @@
                 About
             </a>
         </nav>
-        <header>
-            Poop
-        </header>
+     
         <h1>
-            something
+            About Me
         </h1>
+        <br>
+        <img src="assets/images/41642502_10156576744952356_5168537251432366080_n.jpg" alt="Me and my kid">
+        <p>
+            I'm the best
+        </p>
+        <br>
+        <p>
+            at Halo
+        </p>
+        <br>
+        <p>
+            50-0
+        </p>
         <footer>
             footer
         </footer>
