--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 
 <body>
+    <div class="container">
     <div class="header">
         <div class="header-name">
             Anthony Carmack
@@ -27,32 +28,41 @@
                 contact
             </a>
         </div>
-        
+
     </div>
 
-    <h1>
-        About Me
-    </h1>
     <br>
     <div class="about-me">
+        <h1>
+            About Me
+            <hr>
+        </h1>
         <img src="assets/images/41642502_10156576744952356_5168537251432366080_n.jpg" alt="Me and my kid">
         <br>
-        <p>
-             I currently supervise a granite company in Winter Haven FL.  Our shop relies on alph cam and auto cad programs to function the CNC saw so I took it upon myself to learn these programs and it has sparked something in me to do more.
-        </p>
+        <div>
+            <p>
+                I currently supervise a granite company in Winter Haven FL. Our shop relies on alph cam and auto cad
+                programs to function the CNC saw so I took it upon myself to learn these programs and it has sparked
+                something in me to do more.
+            </p>
+        </div>
         <br>
-        <p>
-            I am hoping to use my new skills get our company out of the dark ages and grow our business.
-        </p>
+        <div>
+            <p>
+                I am hoping to use my new skills get our company out of the dark ages and grow our business.
+            </p>
+        </div>
         <br>
-        <p>
-            Most trade companies are very old school and are getting left in the dust by the new technologies, I aim to prevent that for us.
-        </p>
-
+        <div>
+            <p>
+                Most trade companies are very old school and are getting left in the dust by the new technologies, I aim
+                to prevent that for us.
+            </p>
+        </div>
+        <footer>
+            Copyright @
+        </footer>
     </div>
-    <footer>
-        Copyright @
-    </footer>
 </body>
 
 </html>
