--- a/contact.html
+++ b/contact.html
@@ -1,38 +1,46 @@
 <!DOCTYPE html>
 
+
+
 <html>
-    <head>
-        <title>
-            contact
-        </title>
-    </head>
-    <body>
-        <nav>
-            <p>
-                Anthony Carmack
-            </p>
-            <a href="contact.html">
-                Contact
-            </a>
-            <a href="portfolio.html">
-                Portfolio
-            </a>
-            <a href="index.html">
+
+<head>
+    <title>
+        contact
+    </title>
+    <link href="assets/css/style.css" type="text/css" rel="stylesheet">
+</head>
+
+<body>
+    <div class="header">
+        <div class="header-name">
+            Anthony Carmack
+        </div>
+        <div class="header-link-group">
+            <a class="header-link" href="contact.html">
                 About
             </a>
-        </nav>
-        <h1>
-            Contact 
-        </h1>
-        <form>
-            <label for="name">name</label> <br>
-            <input id="name" type="text" name="name"> <br>
-            <label for="email">email</label> <br>
-            <input id="email" type="email" name="email"> <br>
-            <label for="message">message</label> <br>
-            <textarea id="message" type="text" name="message"> </textarea>
-        </form>
-        
-        
-    </body>
+            <a class="header-link" href="portfolio.html">
+                Portfolio
+            </a>
+            <a class="header-link" href="index.html">
+                contact
+            </a>
+        </div>
+    </div>    
+    <h1>
+        Contact
+    </h1>
+    <form>
+        <label for="name">name</label> <br>
+        <input id="name" type="text" name="name"> <br>
+        <label for="email">email</label> <br>
+        <input id="email" type="email" name="email"> <br>
+        <label for="message">message</label> <br>
+        <textarea id="message" type="text" name="message"> </textarea>
+    </form>
+
+
+</body>
+
 </html>
