--- a/contact.html
+++ b/contact.html
@@ -27,19 +27,20 @@
                 contact
             </a>
         </div>
-    </div>    
+    </div>
     <h1>
         Contact
     </h1>
-    <form>
-        <label for="name">name</label> <br>
-        <input id="name" type="text" name="name"> <br>
-        <label for="email">email</label> <br>
-        <input id="email" type="email" name="email"> <br>
-        <label for="message">message</label> <br>
-        <textarea id="message" type="text" name="message"> </textarea>
-    </form>
-
+    <div class="container">
+        <form>
+            <label for="name">name</label> <br>
+            <input id="name" type="text" name="name"> <br>
+            <label for="email">email</label> <br>
+            <input id="email" type="email" name="email"> <br>
+            <label for="message">message</label> <br>
+            <textarea id="message" type="text" name="message"> </textarea>
+        </form>
+    </div>
 
 </body>
 
