--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>
         My Portfolio
     </title>
+    <link href="assets/css/reset.css" type="text/css" rel="stylesheet">
     <link href="assets/css/style.css" type="text/css" rel="stylesheet">
 
 </head>
