Back to a mess after images

--- a/contact.html
+++ b/contact.html
@@ -8,30 +8,34 @@
     <title>
         contact
     </title>
+    <link href="assets/css/reset.css" type="text/css" rel="stylesheet">
     <link href="assets/css/style.css" type="text/css" rel="stylesheet">
 </head>
 
 <body>
-    <div class="header">
-        <div class="header-name">
-            Anthony Carmack
+    <div class="container">
+        <div class="header">
+            <div class="header-name">
+                Anthony Carmack
+            </div>
+            <div class="header-link-group">
+                <a class="header-link" href="contact.html">
+                    About
+                </a>
+                <a class="header-link" href="portfolio.html">
+                    Portfolio
+                </a>
+                <a class="header-link" href="index.html">
+                    contact
+                </a>
+            </div>
+    
         </div>
-        <div class="header-link-group">
-            <a class="header-link" href="contact.html">
-                About
-            </a>
-            <a class="header-link" href="portfolio.html">
-                Portfolio
-            </a>
-            <a class="header-link" href="index.html">
-                contact
-            </a>
-        </div>
-    </div>
+        <div class="contact">
     <h1>
         Contact
     </h1>
-    <div class="container">
+        </div>
         <form>
             <label for="name">name</label> <br>
             <input id="name" type="text" name="name"> <br>
@@ -41,6 +45,12 @@
             <textarea id="message" type="text" name="message"> </textarea>
         </form>
     </div>
+    <button>
+        Submit
+    </button>
+    <footer>
+        Copyright @
+    </footer>
 
 </body>
 
