--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
     <title>
         My Portfolio
     </title>
+    <link href="assets/css/reset.css" type="text/css" rel="stylesheet">
     <link href="assets/css/style.css" type="text/css" rel="stylesheet">
 
 </head>
@@ -29,12 +30,32 @@
             </a>
         </div>
 
-    </div>
+
 
     <br>
-   <div class="img-gallery">
-    
-   </div>
+    <div class="tivial">
+    <img src="assets/images/0630509534081_p0_v1_s550x406.jpg">
+    </div>
+     <br>
+     <div class="wow">
+     <img src="assets/images/card-world-of-warcraft-54576e6364584e35.jpg">
+     </div>
+     <br>
+     <div class="hangman">
+     <img src="assets/images/download.png">
+    </div>
+     <br>
+    <div class="widgets">
+     <img src="assets/images/71jpY2MZADL._SY355_.jfif">
+    </div>
+     <br> 
+     <div class="rock">
+     <img src="assets/images/download.jfif">
+    </div>   
 </body>
+
+<footer>
+    Copyright @
+</footer>
 
 </html>
