--- a/index.html
+++ b/index.html
@@ -14,56 +14,57 @@
 
 <body>
     <div class="container">
-    <div class="header">
-        <div class="header-name">
-            Anthony Carmack
-        </div>
-        <div class="header-link-group">
-            <a class="header-link" href="contact.html">
-                About
-            </a>
-            <a class="header-link" href="portfolio.html">
-                Portfolio
-            </a>
-            <a class="header-link" href="index.html">
-                contact
-            </a>
+        <div class="header">
+            <div class="header-name">
+                Anthony Carmack
+            </div>
+            <div class="header-link-group">
+                <a class="header-link" href="contact.html">
+                    About
+                </a>
+                <a class="header-link" href="portfolio.html">
+                    Portfolio
+                </a>
+                <a class="header-link" href="index.html">
+                    contact
+                </a>
+            </div>
+
         </div>
 
-    </div>
-
-    <br>
-    <div class="about-me">
-        <h1>
-            About Me
-            <hr>
-        </h1>
-        <img src="assets/images/41642502_10156576744952356_5168537251432366080_n.jpg" alt="Me and my kid">
         <br>
-        <div>
-            <p>
-                I currently supervise a granite company in Winter Haven FL. Our shop relies on alph cam and auto cad
-                programs to function the CNC saw so I took it upon myself to learn these programs and it has sparked
-                something in me to do more.
-            </p>
+        <div class="about-me">
+            <h1>
+                About Me
+                <hr>
+            </h1>
+            <img src="assets/images/41642502_10156576744952356_5168537251432366080_n.jpg" alt="Me and my kid">
+            <br>
+            <div>
+                <p>
+                    I currently supervise a granite company in Winter Haven FL. Our shop relies on alph cam and auto cad
+                    programs to function the CNC saw so I took it upon myself to learn these programs and it has sparked
+                    something in me to do more.
+                </p>
+            </div>
+            <br>
+            <div>
+                <p>
+                    I am hoping to use my new skills get our company out of the dark ages and grow our business.
+                </p>
+            </div>
+            <br>
+            <div>
+                <p>
+                    Most trade companies are very old school and are getting left in the dust by the new technologies, I
+                    aim
+                    to prevent that for us.
+                </p>
+            </div>
+            <footer>
+                Copyright @
+            </footer>
         </div>
-        <br>
-        <div>
-            <p>
-                I am hoping to use my new skills get our company out of the dark ages and grow our business.
-            </p>
-        </div>
-        <br>
-        <div>
-            <p>
-                Most trade companies are very old school and are getting left in the dust by the new technologies, I aim
-                to prevent that for us.
-            </p>
-        </div>
-        <footer>
-            Copyright @
-        </footer>
-    </div>
 </body>
 
 </html>
