Fixed the Textarea

--- a/contact.html
+++ b/contact.html
@@ -20,21 +20,21 @@
             </div>
             <div class="header-link-group">
                 <a class="header-link" href="contact.html">
-                    About
+                    Contact
                 </a>
                 <a class="header-link" href="portfolio.html">
                     Portfolio
                 </a>
                 <a class="header-link" href="index.html">
-                    contact
+                    About
                 </a>
             </div>
-    
+
         </div>
         <div class="contact">
-    <h1>
-        Contact
-    </h1>
+            <h1>
+                Contact
+            </h1>
         </div>
         <form>
             <label for="name">name</label> <br>
@@ -42,7 +42,7 @@
             <label for="email">email</label> <br>
             <input id="email" type="email" name="email"> <br>
             <label for="message">message</label> <br>
-            <textarea id="message" type="text" name="message"> </textarea>
+            <textarea id="message" type="text" name="message" rows="20" cols="60"> </textarea>
         </form>
     </div>
     <button>
