--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
             </div>
             <div class="header-link-group">
                 <a class="header-link" href="contact.html">
-                    About
+                    Contact
                 </a>
                 <a class="header-link" href="portfolio.html">
                     Portfolio
                 </a>
                 <a class="header-link" href="index.html">
-                    contact
+                    About
                 </a>
             </div>
 
