--- a/portfolio.html
+++ b/portfolio.html
@@ -14,48 +14,50 @@
 
 <body>
     <div class="container">
-    <div class="header">
-        <div class="header-name">
-            Anthony Carmack
-        </div>
-        <div class="header-link-group">
-            <a class="header-link" href="contact.html">
-                About
-            </a>
-            <a class="header-link" href="portfolio.html">
-                Portfolio
-            </a>
-            <a class="header-link" href="index.html">
-                contact
-            </a>
-        </div>
+        <div class="header">
+            <div class="header-name">
+                Anthony Carmack
+            </div>
+            <div class="header-link-group">
+                <a class="header-link" href="contact.html">
+                    Contact
+                </a>
+                <a class="header-link" href="portfolio.html">
+                    Portfolio
+                </a>
+                <a class="header-link" href="index.html">
+                    About
+                </a>
+            </div>
 
 
 
-    <br>
-    <div class="tivial">
-    <img src="assets/images/0630509534081_p0_v1_s550x406.jpg">
-    </div>
-     <br>
-     <div class="wow">
-     <img src="assets/images/card-world-of-warcraft-54576e6364584e35.jpg">
-     </div>
-     <br>
-     <div class="hangman">
-     <img src="assets/images/download.png">
-    </div>
-     <br>
-    <div class="widgets">
-     <img src="assets/images/71jpY2MZADL._SY355_.jfif">
-    </div>
-     <br> 
-     <div class="rock">
-     <img src="assets/images/download.jfif">
-    </div>   
+            <br>
+            <div class="tivial">
+                <img src="assets/images/0630509534081_p0_v1_s550x406.jpg" height="200" width="200">
+
+            </div>
+            <br>
+            <div class="wow">
+                <img src="assets/images/card-world-of-warcraft-54576e6364584e35.jpg" height="200" width="200">
+            </div>
+            <br>
+            <div class="hangman">
+                <img src="assets/images/download.png" height="200" width="200">
+            </div>
+            <br>
+            <div class="widgets">
+                <img src="assets/images/71jpY2MZADL._SY355_.jfif" height="200" width="200">
+            </div>
+            <br>
+            <div class="rock">
+                <img src="assets/images/download.jfif" height="200" width="200">
+            </div>
+
+
+            <footer padding:0; margin:0; height:100%;>
+                Copyright @
+            </footer>
 </body>
-
-<footer>
-    Copyright @
-</footer>
 
 </html>
