Close as I can get it...

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 </p>
             </div>
             <footer>
-                Copyright @
+                Anthony C &copy;
             </footer>
         </div>
 </body>
