--- a/portfolio.html
+++ b/portfolio.html
@@ -33,31 +33,37 @@
 
 
             <br>
-            <div class="tivial">
-                <img src="assets/images/0630509534081_p0_v1_s550x406.jpg" height="200" width="200">
+            <div class="photos">
+                <div class="tivial">
+                    <img src="assets/images/0630509534081_p0_v1_s550x406.jpg" height="200" width="200">
 
+                </div>
+                <br>
+                <div class="wow">
+                    <img src="assets/images/card-world-of-warcraft-54576e6364584e35.jpg" height="200" width="200">
+                </div>
+                <br>
+                <div class="hangman">
+                    <img src="assets/images/download.png" height="200" width="200">
+                </div>
+                <br>
+                <div class="widgets">
+                    <img src="assets/images/71jpY2MZADL._SY355_.jfif" height="200" width="200">
+                </div>
+                <br>
+                <div class="rock">
+                    <img src="assets/images/download.jfif" height="200" width="200">
+                </div>
             </div>
-            <br>
-            <div class="wow">
-                <img src="assets/images/card-world-of-warcraft-54576e6364584e35.jpg" height="200" width="200">
-            </div>
-            <br>
-            <div class="hangman">
-                <img src="assets/images/download.png" height="200" width="200">
-            </div>
-            <br>
-            <div class="widgets">
-                <img src="assets/images/71jpY2MZADL._SY355_.jfif" height="200" width="200">
-            </div>
-            <br>
-            <div class="rock">
-                <img src="assets/images/download.jfif" height="200" width="200">
+            <div class="newfooter">
+                <footer>
+                    Copyright &copy;
+                </footer>
             </div>
 
 
-            <footer padding:0; margin:0; height:100%;>
-                Copyright @
-            </footer>
+
 </body>
+
 
 </html>
