--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 </p>
             </div>
             <footer>
-                Anthony C &copy;
+                Anthony C &copy
             </footer>
         </div>
 </body>
